# Arauwyr

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.ui
